# hassio-ecoflow-cloud

./: .devcontainer.json  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  apidocs.txt  debug.init.py  hacs.json  mise.toml  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: .env.example  devcontainer.json  setup_ecoflow_config.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_device.yml
.github/workflows/: hacs.yml  hassfest.yml  lint.yaml  validate.yml
config/: configuration.yaml
custom_components/ecoflow-cloud/: __init__.py  config_flow.py  diagnostics.py  manifest.json  number.py  sensor.py  switch.py
custom_components/ecoflow_cloud/: DeviceData.py  DeviceOptions.py  __init__.py  _preload_proto.py  binary_sensor.py  button.py  climate.py  config_flow.py  device_data.py  diagnostics.py  manifest.json  number.py  recorder.py  repairs.py  select.py  sensor.py  services.yaml  switch.py
diag/: delta2.json  delta_2_max.json  delta_3.json  delta_3_2.json  delta_3_3.json  delta_mini.json  delta_pro.json  delta_pro_ultra_x.json  powerstream.json  river_2_max.json  river_max.json  river_mini.json  river_pro.json  smart_home_panel.json  smart_home_panel_3.json
docs/: Contribution.md  ble_wifi_recovery.md  device_management.md  gen.py  integration.md  oldgen.py  stream_ac_proto_fields.md  summary.md
docs/devices/: ALTERNATOR.md  DELTA_2-Public.md  DELTA_2.md  DELTA_2_MAX.md  DELTA_2_Max-Public.md  DELTA_3-Public.md  DELTA_3.md  DELTA_3_1500.md  DELTA_MAX.md  DELTA_MINI.md  (+44 more)
tasks/: utf8_decode_error_analysis.md
(+158 files in other folders)
