[project]
name = "hassio-ecoflow-cloud"
version = "1.5.0-beta2"
description = "Home Assistant integration for EcoFlow devices via the cloud MQTT API"
requires-python = ">=3.13"
dependencies = [
    "homeassistant>=2024.5.5",
    "paho-mqtt==2.1.0",
    "protobuf==6.32.0",
    "jsonpath-ng>=1.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "types-protobuf==6.32.1.20251210",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
indent-width = 4

[tool.mypy]
allow_untyped_calls = true
check_untyped_defs = true
disable_error_code = "import-untyped"
exclude = [
    "ecoflow_cloud/config_flow.py",
]
